# beadsmithy

./: .bwconfig  .gitignore  .sprite  AGENTS.md  CONTEXT.md  index.html  lefthook.yml  oxfmt.config.ts  oxlint.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts  wdio.issue-list.conf.ts  wdio.mermaid.conf.ts  wdio.settings.conf.ts
.config/: wt.toml
.devin/: config.json
.pi/: settings.json
issues/: bsm-1e7.json  bsm-4ca.json  bsm-6qw.json  bsm-7en.1.json  bsm-7en.2.json  bsm-7en.3.json  bsm-7en.4.json  bsm-7en.5.json  bsm-7en.6.json  bsm-7en.7.json  bsm-7en.json  bsm-8ul.json  bsm-al6.1.json  bsm-al6.2.json  bsm-al6.3.json  bsm-al6.4.json  bsm-al6.json  bsm-dbh.1.json  bsm-dbh.10.json  bsm-dbh.11.json  bsm-dbh.12.json  bsm-dbh.2.json  bsm-dbh.3.json  bsm-dbh.4.json  bsm-dbh.5.json  bsm-dbh.6.json  bsm-dbh.7.json  bsm-dbh.8.json  bsm-dbh.9.json  bsm-dbh.json  bsm-f80.json  bsm-g12.json  bsm-gbd.1.json  bsm-gbd.10.json  bsm-gbd.2.json  bsm-gbd.3.json  (+93 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  webdriver-e2e.json
src-tauri/src/: dev_bridge.rs  lib.rs  main.rs  refresh.rs  rpc.rs  settings.rs  workspace.rs
src-tauri/src/dev_bridge/: tests.rs
src-tauri/src/issues/: adapter.rs  error.rs  mod.rs  raw.rs  runner.rs
src-tauri/src/issues/adapter/: tests.rs
src-tauri/src/issues/runner/: tests.rs
src-tauri/src/refresh/: tests.rs
src-tauri/src/rpc/: tests.rs
src-tauri/src/settings/: tests.rs
src-tauri/src/workspace/: tests.rs
(+112 files in other folders)
