[package]
name = "beadsmith"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "__alpha_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"
scopeguard = "1"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry"] }
taurpc = "0.7.1"
specta = { version = "=2.0.0-rc.22", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
specta-typescript = "0.0.9"
# WebDriver plugins backing the end-to-end suite (see docs/agents/webdriver-e2e.md).
# Only ever registered in debug builds (src-tauri/src/lib.rs); kept as normal
# dependencies so the Tauri capability ACL schemas are generated for builds.
tauri-plugin-wdio = "1"
tauri-plugin-wdio-webdriver = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
